@@ -9,6 +9,7 @@ supports several formats, including:
   <li><a href="biorad.html">Bio-Rad PIC</a></li>
   <li><a href="deltavision.html">Deltavision</a></li>
   <li><a href="gatan.html">Gatan Digital Micrograph</a></li>
+  <li><a href="ics.html">Image Cytometry Standard</a></li>
   <li><a href="imagepro_seq.html">Image-Pro Sequence</a></li>
   <li><a href="imagepro_ipw.html">Image-Pro Workspace</a></li>
   <li><a href="iplab.html">IPLab</a></li>
@@ -24,7 +25,7 @@ supports several formats, including:
     BMP, DICOM, FITS, GIF, JPEG, PGM, PICT, PNG</li>
 </ul>
 
-Not yet supported (but planned) are Nikon ICS, FV1000 OIB/OIF, and OME-XML.
+Not yet supported (but planned) are FV1000 OIB/OIF and OME-XML.
 
 <p>For a current and complete list of formats, see the
 <a href="http://www.loci.wisc.edu/visbio/formats.html">VisBio file formats</a>
